fixes to boolean field logic

--- a/index.html
+++ b/index.html
@@ -27,16 +27,14 @@
 			</div>
 		</div>
 		<div data-role="page" id="calc">
-			<div class="cont">
-				<a href="#home"><div data-role="header" class="toplogo"></div></a>
-				<div data-role="content" >
-					<div id="fieldList"></div>
-					<div class="clear-20"></div>
-					<div id="submitBox"><a href="#" data-role="button" id="submitButton" data-icon="star" >Calculate!</a></div>
-					<div id="resultArea">
-						<div id="beforeShow"><div class="centerit"><h3>Your Result Here</h3></div></div>
-						<div id="resultBox" data-role="listview"></div>
-					</div>
+			<a href="#home"><div data-role="header" class="toplogo"></div></a>
+			<div data-role="content" >
+				<div id="fieldList"></div>
+				<div class="clear-20"></div>
+				<div id="submitBox"><a href="#" data-role="button" id="submitButton" data-icon="star" >Calculate!</a></div>
+				<div id="resultArea">
+					<div id="beforeShow"><div class="centerit"><h3>Your Result Here</h3></div></div>
+					<div id="resultBox"></div>
 				</div>
 			</div>
 		</div>
